language/move-lang/tests/move_check/typing/constant_allowed_but_not_supported.exp
error: 

   ┌── tests/move_check/typing/constant_allowed_but_not_supported.move:4:9 ───
   │
 4 │         move x;
   │         ^^^^^^ Invalid move. Unbound local 'x'
   │

error: 

   ┌── tests/move_check/typing/constant_allowed_but_not_supported.move:5:9 ───
   │
 5 │         copy y;
   │         ^^^^^^ Invalid copy. Unbound local 'y'
   │

error: 

   ┌── tests/move_check/typing/constant_allowed_but_not_supported.move:6:9 ───
   │
 6 │         z;
   │         ^ Invalid local usage. Unbound local 'z'
   │

